--- a/view/commons/menuComm.html
+++ b/view/commons/menuComm.html
@@ -6,14 +6,12 @@
     }
 }
 #nv .nav_a{
-        min-width: 80px;
+        /* min-width: 80px; */
         color: rgb(0,0,0);
         font-size: 19px;
-        margin-right: 20px;
-        margin-left: 0;
 }
-#nv .navbar-nav li:first-of-type a{
-        min-width: 30px;
+#nv .navbar-nav li{
+        margin-right: 20px;
 }
 #navcol-2 .nav-item:hover a{
     color: #f4744c;
@@ -21,7 +19,7 @@
 }
 </style>
 <nav id="nv" class="navbar navbar-light navbar-expand-md">
-    <div class="container-fluid" style="padding-bottom: 5px;">
+    <div class="container-fluid">
         <div class="container">
 
                 <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2">
