--- a/view/commons/footer.html
+++ b/view/commons/footer.html
@@ -14,7 +14,7 @@
 
 <body>
     <footer class="footer-dark" style="background: rgb(176,165,164);color: rgb(0,0,0);">
-        <div class="container">
+        <div class="container"  style="font-family: 'Noto Sans KR', sans-serif;">
             <div class="row">
                 <div class="col-sm-6 col-md-3 col-xl-2 item">
                     <h3>INFORMATION</h3>
