--- a/view/community/story.html
+++ b/view/community/story.html
@@ -149,11 +149,11 @@
     <header include-html="../commons/header.html"></header>
     <nav include-html="../commons/menuComm.html"></nav>
 
-    <div class="container mt-5">
-        <h1 style="font-size: 30px;margin-bottom: 15px;"><strong>스토리</strong></h1>
+    <div class="container mt-4">
+        <h1 style="font-size: 30px;"><strong>스토리</strong></h1>
 
         <div id="type_menu">
-            <div class="row my-5 mx-1">
+            <div class="row my-3 mx-1">
 
                 <div class="col-md-2 pop_wrap pl-0">
                     <button type="button" class="btn_pop" value="sort=0">정렬 <i class="fas fa-sort"></i></button>
@@ -345,7 +345,7 @@ function getCardList() {
                 $("#hotCardList").append(app);
             }
         },
-        error: function () {  alert('error');   }
+        error: function () {  console.log('error');   }
     });
 };
 
